basicnodek8s/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    field.cattle.io/publicEndpoints: '[{"addresses":["172.19.0.3"],"port":443,"protocol":"HTTPS","serviceName":"cattle-system:rancher","ingressName":"cattle-system:rancher","hostname":"rancher.localhost","allNodes":false}]'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  creationTimestamp: "2023-09-23T17:55:28Z"
  generation: 1
  labels:
    app: rancher
  name: rancher
  namespace: cattle-system
  resourceVersion: "3508"
  uid: 4dbe7064-1294-49f0-be1f-2fd1fc97d54d
spec:
  rules:
  - host: rancher.localhost
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        pathType: ImplementationSpecific
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hellok8s-svc
            port:
              number: 8080
  tls:
  - hosts:
    - rancher.localhost
    secretName: tls-rancher-ingress
status:
  loadBalancer:
    ingress:
    - ip: 172.19.0.3
